--- a/deployment/feandbe/threetier.yaml
+++ b/deployment/feandbe/threetier.yaml
@@ -13,7 +13,7 @@ spec:
     spec:
       containers:
         - name: backend
-          image: "mohanraz81/mysynbackend2112"
+          image: "nseminer/backend"
           ports:
             - name: http
               containerPort: 80
@@ -79,7 +79,7 @@ spec:
     spec:
       containers:
       - name: frontend
-        image: "mohanraz81/mysynfrontend2112"
+        image: "nseminer/anzfontend"
         ports:
           - name: http
             containerPort: 80
