--- a/deployment/database/createdb.yaml
+++ b/deployment/database/createdb.yaml
@@ -5,7 +5,7 @@
       ec2_group:
         name: dbsg
         description: an example EC2 group
-        vpc_id: vpc-vpc-019b665e822972388
+        vpc_id: vpc-019b665e822972388
         region: us-east-1
         rules:
           - proto: tcp
